--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "brave-nightly-autoupdate",
   "version": "0.0.1",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node index"
+    "start": "tsc && node --experimental-modules index"
   },
   "keywords": [],
   "author": "Scott Marshall <marshals@gmail.com>",
   "license": "MIT",
-  "type": "module",
   "dependencies": {
     "cron": "^1.8.2",
+    "node-fetch": "^2.6.1",
     "typescript": "^4.1.0-dev.20200919"
   },
   "devDependencies": {
