Change license to GPLv3, add license file

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "keywords": [],
   "author": "Scott Marshall <marshals@gmail.com>",
-  "license": "MIT",
+  "license": "GPLv3",
   "dependencies": {
     "cron": "^1.8.2",
     "node-fetch": "^2.6.1",
